<resources>
    <string name="app_name" translatable="false">SimpleTasks</string>
    <string name="date_time_format" translatable="false">dd. MMMM yyyy, HH:mm</string>


    <string name="tasks_today">Tasks Today</string>
    <string name="edit_tasks">Edit Tasks</string>
    <string name="login_title">Login</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="total_steps">%1$d Steps</string>
    <string name="have_problem">I have a problem</string>
    <string name="back">Back</string>
    <string name="next">Next step</string>
    <string name="popup_skip_text">Do you want to skip this task?</string>
    <string name="delete_task">Delete Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="add_task">Add task</string>
    <string name="run_task">Run Task</string>
    <string name="skip_task">Skip Task</string>
    <string name="schedule_task">Schedule Task</string>
    <string name="task_image">Task Image</string>
    <string name="task_step_image">Task Step Image</string>
    <string name="add_task_step">Add Task Step</string>
    <string name="login_hint">Log in to gain access to edit tasks</string>
    <string name="open_settings">Open settings</string>
    <string name="save">Save</string>
    <string name="task_title_hint">Task title</string>
    <string name="type">Type: %1$s</string>
    <string name="drag_task">Drag Task</string>
    <string name="plan_next_execution">Plan next execution</string>
    <string name="current_next_execution">Next execution: %1$s</string>
    <string name="plan_last_execution">Plan last execution</string>
    <string name="current_last_execution">Last execution: %1$s</string>
    <string name="current_interval">Interval: %1$d Days, %2$d Hours, %3$d Minutes</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="task_notification_title">Task reminder</string>
    <string name="task_notification_description">You have an open task. Take care of it now.</string>

    <string name="error_title_empty">The title must not be empty</string>
    <string name="correct">Correct</string>
    <string name="discard_changes_text">Do you really want to discard your changes?</string>
    <string name="discard_changes_button">Discard</string>
    <string name="finish_task_text">You are about to finish the task. Have you completed all steps?</string>
    <string name="finish_task_button">Finish</string>
    <string name="abort_task_text">Do you really want to abort the task?</string>
    <string name="abort_task_button">Abort</string>
    <string name="logout_popup_text">Do you really want to log out?</string>
    <string name="logout_popup_button">Logout</string>
    <string name="delete_task_popup_text">Do you really want to delete the task?</string>
    <string name="delete_task_popup_button">Delete</string>
    <string name="no_steps_set">No steps were set for this task. You cannot run and finish it.</string>

    <string name="placeholder">Placeholder</string>
    <string name="pin">Pin</string>
    <string name="login_error">Wrong pin!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pin_settings">PIN settings</string>
    <string name="add_pin">Add PIN</string>
    <string name="remove_pin">Remove PIN</string>
    <string name="display_settings">Display settings</string>
    <string name="display_font_size_settings">Set display and font size</string>
    <string name="create_pin_hint">At least five digits</string>
    <string name="send_pin_explanation">Send the PIN to someone else</string>
    <string name="local_pin_explanation">The PIN is for me</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="phone_number_error">Not a valid phone number.</string>
    <string name="generate_pin">Generate PIN</string>
    <string name="title_add_pin">Add PIN</string>
    <string name="add_pin_explanation">Generates a new PIN that will be added to the existing ones.</string>
    <string name="send_pin_error">An error has occurred while sending the PIN. Please try again later.</string>
    <string name="title_remove_pin">Remove PIN</string>
    <string name="remove_pin_explanation">Enter your PIN to remove it from the available PINs.</string>
    <string name="remove_pin_intro_warning_more_pins">Warning: There are more PINs than this one. If you don\'t know any other PIN, you will not be able to access protected areas like this one anymore!</string>
    <string name="remove_pin_intro_warning_last_pin">Warning: This is the last PIN. Removing it will let anyone with access to your phone edit the settings and tasks.</string>
    <string name="remove_pin_hint">PIN</string>
    <string name="edit_step">Edit Step</string>
    <string name="change_image">Change Image</string>
    <string name="step_title">Step Title</string>
    <string name="step_description">Step Description</string>
    <string name="new_recording">New Recording</string>
    <string name="delete_recording">Delete Recording</string>
    <string name="step_title_image">Step Title Image</string>
    <string name="empty_step_title">Step Title must not be empty!</string>
    <string name="empty_step_description">Step Description must not be empty!</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="no_video">No Video recorded yet.</string>
    <string name="no_audio">No Audio recorded yet.</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="redo_image">New Photo</string>
    <string name="recording_in_progress">Recording in progress</string>
    <string name="playing_in_progress">Playing a recording</string>
    <string name="no_image">No title image set.</string>
    <string name="pin_not_found">This PIN does not exist</string>
    <string name="invalid_pin">PIN is not valid</string>
    <string name="unknown_error_msg">Something went wrong. Please try again later.</string>
    <string name="change_language_settings">Change language</string>
    <string name="language_settings">Language settings</string>
    <string name="no_pin_set_explanation">Currently no PIN set!</string>
    <string name="not_logged_in_explanation">You are currently not logged in!</string>
    <string name="title_report_problem">Report your problem</string>
    <string name="report_problem_explanation">You have encountered a problem and are stuck? No worries, you can write your problem here and use the button below to send it!</string>
    <string name="report_problem_send_button">Send problem</string>
    <string name="report_problem_abort">Back to task</string>
    <string name="no_problem_stated">Please describe your problem first!</string>
    <string name="problem_statement_additional_information">Additional Information on the task:\nTask title: %1$s\nStep title: %2$s\nStep index: %3$d</string>
    <string name="cancel_popup">Cancel</string>
    <string name="skip_task_popup">Skip Task</string>
    <string name="accept_info_popup">Okay</string>
    <string name="show_pin_popup">Do you want to add %1$s as a new PIN?</string>
    <string name="pin_sent_popup">A new PIN was successfully sent to %1$s!</string>
    <string name="confirm_delete_pin_popup">Are you sure that you want to delete this PIN?</string>
    <string name="pin_deletion_confirmation">The PIN was deleted!</string>
    <string name="video" translatable="false">Video</string>
    <string name="audio" translatable="false">Audio</string>
    <string name="text" translatable="false">Text</string>
    <string name="request_type">What type of task step do you want to create?</string>
    <string name="no_pin_set_tip">Would you like to protect the task management with a PIN?</string>
</resources>